create 4 new themes, fix hard coded translations,

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -170,6 +170,30 @@
     "nineties": {
       "name": "التسعينيات",
       "description": "أضواء نيون كهربائية وتدرجات رمادية لإطلالة فايبرويف كلاسيكية."
+    },
+    "highContrastDark": {
+      "name": "تباين عالي داكن",
+      "description": "أسطح داكنة مع إبرازات مشرقة مصممة للوضوح في الإضاءة المنخفضة."
+    },
+    "highContrastLight": {
+      "name": "تباين عالي فاتح",
+      "description": "خلفيات مشرقة مع خطوط عريضة للفصل الأقصى."
+    },
+    "typewriter": {
+      "name": "آلة كاتبة",
+      "description": "جمالية أحادية المسافة بسيطة مع نغمات كريمية معكوسة ورمادية داكنة."
+    },
+    "forrest": {
+      "name": "غابة",
+      "description": "خضرة أرضية مورقة مستوحاة من الغابات العميقة والنمو الطبيعي."
+    },
+    "motown": {
+      "name": "موتاون",
+      "description": "تفاؤل الستينيات وصوت موتاون مع مرجان نابض بالحياة، وأزرق عميق، وطاقة مليئة بالروح."
+    },
+    "lazySundayMorning": {
+      "name": "صباح الأحد الكسول",
+      "description": "أصفر صفار البيض، وعصير البرتقال، والفطائر، والقهوة - شعور صباح الأحد المريح."
     }
   },
   "tabs": {
@@ -228,7 +252,7 @@
     "logoAccessibility": "شعار Haricot",
     "onboardingButtonPlaceholder": "ضع زر بدء الإعداد هنا",
     "searchAllRecipes": "ابحث في جميع الوصفات",
-    "searchPlaceholder": "ابحث بالاسم أو المكوّن",
+    "searchPlaceholder": "ابحث عن الوصفات بالاسم أو المكوّن",
     "searchLoading": "جارٍ تحميل النتائج…",
     "searchNoResults": "لم يتم العثور على وصفات",
     "searchViewAll": "عرض كل النتائج",
