--- a/i18n/locales/hi.json
+++ b/i18n/locales/hi.json
@@ -286,6 +286,22 @@
     "highContrastLight": {
       "name": "उच्च कंट्रास्ट लाइट",
       "description": "अधिकतम अलगाव के लिए बोल्ड आउटलाइन के साथ उजले बैकग्राउंड।"
+    },
+    "typewriter": {
+      "name": "टाइपराइटर",
+      "description": "उलटे क्रीम और गहरे ग्रे टोन के साथ न्यूनतम मोनोस्पेस सौंदर्यशास्त्र।"
+    },
+    "forrest": {
+      "name": "जंगल",
+      "description": "गहरे जंगलों और प्राकृतिक विकास से प्रेरित मिट्टी के रसीले हरे।"
+    },
+    "motown": {
+      "name": "मोटाउन",
+      "description": "1960 का आशावाद और मोटाउन ध्वनि जीवंत कोरल, गहरे नीले और आत्मा से भरी ऊर्जा के साथ।"
+    },
+    "lazySundayMorning": {
+      "name": "आलसी रविवार सुबह",
+      "description": "जर्दी पीला, संतरे का रस, पैनकेक और कॉफी - एक आरामदायक रविवार सुबह की भावना।"
     }
   },
   "tabs": {
@@ -344,7 +360,7 @@
     "logoAccessibility": "Haricot वर्डमार्क",
     "onboardingButtonPlaceholder": "यहाँ ऑनबोर्डिंग बटन जाएगा",
     "searchAllRecipes": "सभी रेसिपी खोजें",
-    "searchPlaceholder": "नाम या सामग्री से खोजें",
+    "searchPlaceholder": "नाम या सामग्री से व्यंजन खोजें",
     "searchLoading": "परिणाम लोड हो रहे हैं…",
     "searchNoResults": "कोई रेसिपी नहीं मिली",
     "searchViewAll": "सभी परिणाम देखें",
