--- a/i18n/locales/ur.json
+++ b/i18n/locales/ur.json
@@ -286,6 +286,22 @@
     "highContrastLight": {
       "name": "ہائی کنٹراسٹ لائٹ",
       "description": "زیادہ سے زیادہ تفریق کے لیے بولڈ آؤٹ لائنز کے ساتھ روشن پس منظر۔"
+    },
+    "typewriter": {
+      "name": "ٹائپ رائٹر",
+      "description": "الٹے کریم اور گہرے سرمئی ٹون کے ساتھ کم از کم مونو اسپیس جمالیات۔"
+    },
+    "forrest": {
+      "name": "جنگل",
+      "description": "گہرے جنگلات اور قدرتی نشوونما سے متاثر زمینی سرسبز سبز۔"
+    },
+    "motown": {
+      "name": "موٹاؤن",
+      "description": "1960 کی دہائی کا امید افزا اور موٹاؤن ساؤنڈ متحرک کورلز، گہرے نیلے اور روحانی توانائی کے ساتھ۔"
+    },
+    "lazySundayMorning": {
+      "name": "سست اتوار کی صبح",
+      "description": "زردی، سنتری کا جوس، پینکیکس اور کافی - ایک آرام دہ اتوار کی صبح کا احساس۔"
     }
   },
   "tabs": {
@@ -344,7 +360,7 @@
     "logoAccessibility": "Haricot ورڈ مارک",
     "onboardingButtonPlaceholder": "آن بورڈنگ بٹن یہاں ہوگا",
     "searchAllRecipes": "تمام ترکیبیں تلاش کریں",
-    "searchPlaceholder": "نام یا اجزاء سے تلاش کریں",
+    "searchPlaceholder": "نام یا اجزاء سے ترکیبیں تلاش کریں",
     "searchLoading": "نتائج لوڈ ہو رہے ہیں…",
     "searchNoResults": "کوئی ترکیب نہیں ملی",
     "searchViewAll": "تمام نتائج دیکھیں",
