--- a/i18n/locales/hi.json
+++ b/i18n/locales/hi.json
@@ -432,6 +432,7 @@
     "errorLoadProfile": "हम आपकी प्रोफ़ाइल विवरण लोड नहीं कर पाए। कृपया थोड़ी देर बाद फिर से कोशिश करें।",
     "language": "भाषा",
     "languageDesc": "अपनी पसंदीदा ऐप भाषा चुनें। कंटेंट तुरंत अपडेट होता है।",
+    "userData": "उपयोगकर्ता डेटा",
     "nutritionTitle": "पोषण लक्ष्य",
     "nutritionDesc": "अपना इरादा अभी सेट करें और बाद में लक्ष्यों को समायोजित करें।",
     "nutritionStarter": "स्टार्टर प्रोफ़ाइल",
@@ -853,5 +854,10 @@
       "iconSize": "आइकन आकार",
       "iconSizeDescription": "नेविगेशन आइकन के आकार को समायोजित करें"
     }
+  },
+  "welcome": {
+    "title": "Haricot में आपका स्वागत है",
+    "publicContent": "यह सार्वजनिक सामग्री है जिसे कोई भी देख सकता है।",
+    "loginPrompt": "आप ऊपर दिए गए हेडर का उपयोग करके लॉग इन कर सकते हैं।"
   }
 }
