--- a/i18n/locales/ur.json
+++ b/i18n/locales/ur.json
@@ -432,6 +432,7 @@
     "errorLoadProfile": "ہم آپ کی پروفائل تفصیلات لوڈ نہیں کر سکے۔ براہ کرم کچھ دیر بعد دوبارہ کوشش کریں۔",
     "language": "زبان",
     "languageDesc": "اپنی پسندیدہ ایپ زبان منتخب کریں۔ مواد فوراً اپڈیٹ ہوتا ہے۔",
+    "userData": "صارف کا ڈیٹا",
     "nutritionTitle": "غذائی اہداف",
     "nutritionDesc": "اپنی نیت ابھی سیٹ کریں اور بعد میں اہداف کو ایڈجسٹ کریں جیسے جیسے آپ سیکھیں کہ کیا کام کرتا ہے۔",
     "nutritionStarter": "اسٹارٹر پروفائل",
@@ -853,5 +854,10 @@
       "iconSize": "آئیکن کا سائز",
       "iconSizeDescription": "نیویگیشن آئیکنز کے سائز کو ایڈجسٹ کریں"
     }
+  },
+  "welcome": {
+    "title": "Haricot میں خوش آمدید",
+    "publicContent": "یہ عوامی مواد ہے جسے کوئی بھی دیکھ سکتا ہے۔",
+    "loginPrompt": "آپ اوپر دیے گئے ہیڈر کا استعمال کر کے لاگ ان کر سکتے ہیں۔"
   }
 }
